--- a/style.css
+++ b/style.css
@@ -7,13 +7,52 @@
 .container{
     width: 100%;
     height: 100vh;
+
+}
+
+.sub-container{
+    
+    width: 90%;
+    height: 100vh;
+    margin: auto;
+    padding: 30px 0;
+
 }
 
 ul{
     list-style-type: none;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+
+}
+/* 
+li{
+   border: 1px solid black;
+   width: 220px;
+   height: 270px;
+   margin: 10px 0;
+   position: relative;
 }
 
-li{
-   
+.data-film{
+    position: absolute;
+    bottom: 0;
+    color: black;
+    padding:0 0 5px 10px;
 }
+.data-film img{
+    width: 18px;
+}
+
+.poster{
+    width: 220px;
+    height: 270px;
+    opacity: 0.9; 
+}
+ */
+.fas,.far{
+    color: darkgoldenrod;
+}
+
+
 
